# hermes-test

./: .env.template  .gitignore  Dockerfile  Dockerfile.backend  README.md  docker-compose.yml  nginx.conf  package-lock.json
SKILLS/api-integration-debugging/: SKILL.md
SKILLS/api-integration/atlassian-confluence/: SKILL.md
SKILLS/api-integration/vk-teams-bot-api/: SKILL.md
SKILLS/autonomous-ai-agents/hermes-agent/: SKILL.md
SKILLS/browser-troubleshooting/: SKILL.md
SKILLS/data-science/database-postgres/: SKILL.md
SKILLS/devops/backend-deployment/: SKILL.md
SKILLS/devops/container-deployment/: SKILL.md
SKILLS/devops/docker-browserless-setup/: SKILL.md
SKILLS/devops/docker-compose-deployment/: SKILL.md
SKILLS/devops/docker-env-rules/: SKILL.md
SKILLS/docker-compose-web-project/: SKILL.md
SKILLS/github/github-auth/: SKILL.md
SKILLS/hermes-agent-internals/: SKILL.md
SKILLS/hermes-platform-integration/: SKILL.md
SKILLS/infra-queries/: SKILL.md
SKILLS/integration-verification/: SKILL.md
SKILLS/local-to-vm-deploy/: SKILL.md
backend/: .env.example  .env.template  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  orders.py  products.py  users.py
backend/app/routers/: categories.py  products.py  sellers.py  stores.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.jsx  App.tsx  index.css
vk-teams/: SKILL.md  adapter.py
vkteams/: __init__.py  adapter.py  plugin.yaml
(+57 files in other folders)
