[project]
name = "marketplace-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
